# libvips

./: meson_options.txt
doc/: Cite.md  Examples.md  How-it-opens-files.md  How-it-works.md  Making-image-pyramids.md  Using-vipsthumbnail.md  binding.md  gen-function-list.py  libvips-from-C++.md  meson.build
libvips/arithmetic/: add.c  boolean.c  complex.c  divide.c  math2.c  multiply.c  relational.c  remainder.c  subtract.c
libvips/colour/: dE00.c  dE76.c  dECMC.c
libvips/conversion/: bandjoin.c  embed.c  ifthenelse.c  join.c  sequential.c  tilecache.c
libvips/foreign/: jpeg2vips.c
libvips/freqfilt/: phasecor.c
libvips/mosaicing/: match.c  merge.c  mosaic.c  mosaic1.c
libvips/resample/: reducev.cpp  shrinkv.c
